# femu

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  TEST_COVERAGE_ANALYSIS.md  claude.md  flake.nix  pyproject.toml
.github/workflows/: build.yml  docs.yml  format.yml  lint.yml  test.yml
cmake/: StandaloneModule.cmake
docs/: AI_DEVELOPMENT.md  ARCHITECTURE.md  DEBUGGING.md  MACHINES.md  PLUGINS.md  conf.py  index.md
docs/api/: index.md
docs/api/c/: index.md
docs/api/python/: index.md
docs/architecture/: c-python-boundary.md  index.md  overview.md
docs/architecture/c-core/: decoder.md  executor.md  index.md  memory.md  mpu.md  nvic.md
docs/architecture/python-layer/: emulator.md  gdb-server.md  index.md  peripheral-framework.md
docs/developer/: ai-development.md  building.md  contributing.md  debugging.md  index.md  testing.md  writing-peripherals.md
docs/user/: cli-reference.md  gdb-debugging.md  getting-started.md  index.md  machine-configuration.md  peripherals.md  running-firmware.md
include/: armv8m_decoder.h  armv8m_emulator.h  armv8m_executor.h  armv8m_memory.h  armv8m_mpu.h  armv8m_nvic.h  armv8m_types.h  peripheral_interface.h
include/arch/armv8m/: armv8m_blocks.h  armv8m_cpu.h  armv8m_decoder.h  armv8m_decoder_vtable.h  armv8m_emulator.h  armv8m_exec_regs.h  armv8m_executor.h  armv8m_executor_vtable.h  armv8m_icache.h  armv8m_mpu.h  armv8m_nvic.h  armv8m_types.h
include/emu/: emu_cpu.h  emu_decoder.h  emu_emulator.h  emu_executor.h  emu_interrupt.h  emu_log.h  emu_memory.h  emu_peripheral.h  emu_plugin.h  emu_types.h
python/femu/: __init__.py  _cffi_types.py  _emulator_cffi.py  build.py  cli.py  elf_loader.py  emulator.py  gdb_server.py  logging.py  machine.py  peripheral.py  peripheral_registry.py
python/femu/arch/: __init__.py  armv8m.py  base.py
python/femu/dev/: __init__.py  session.py  test.py  validate.py
python/femu/peripherals/: __init__.py  gpio.py  uart.py
python/tests/: conftest.py  test_build.py  test_cli.py  test_elf_loader.py  test_gdb_server.py  test_machine.py  test_package.py  test_peripheral.py  test_peripherals_uart_gpio.py  test_watchpoints.py
scripts/ci/: __init__.py  build.py  format.py  lint.py  package.py  test.py
src/arch/armv8m/: CMakeLists.txt  armv8m_cpu.c  armv8m_emulator.c  executor_vtable.c
src/arch/armv8m/decoder/: CMakeLists.txt  README.md  decode_thumb16.c  decode_thumb32.c  decode_thumb32_branch.c  decode_thumb32_data.c  decode_thumb32_dsp.c  decode_thumb32_internal.h  decode_thumb32_loadstore.c  decode_thumb32_multiply.c  decode_thumb32_vfp.c  decoder.c  decoder_internal.h  decoder_vtable.c
src/arch/armv8m/decoder/tests/: test_decoder.cpp
src/arch/armv8m/executor/: CMakeLists.txt  README.md  blocks.c  exec_branch.c  exec_data_proc.c  exec_exception.c  exec_fpu.c  exec_handlers.h  exec_load_store.c  exec_system.c  executor.c  icache.c  sau.c
src/arch/armv8m/executor/tests/: test_arithmetic.cpp  test_common.h  test_control_flow.cpp  test_coverage_data_branch.cpp  test_coverage_exception.cpp  test_coverage_load_store.cpp  test_coverage_system.cpp  test_data_proc.cpp  test_dsp.cpp  test_fault_handling.cpp  test_fpu.cpp  test_init.cpp  test_integration_branch.cpp  test_integration_common.h  test_integration_data_proc.cpp  test_integration_exec.cpp  test_integration_main.cpp  test_integration_memory.cpp  test_integration_misc.cpp  test_load_store.cpp  test_main.cpp  test_system.cpp  test_trustzone.cpp
src/arch/armv8m/mpu/: CMakeLists.txt  mpu.c
src/arch/armv8m/mpu/tests/: test_mpu.cpp
src/arch/armv8m/nvic/: CMakeLists.txt  README.md  nvic.c
src/arch/armv8m/nvic/tests/: test_nvic.cpp
src/core/decoder/: CMakeLists.txt  README.md  decode_thumb16.c  decode_thumb32.c  decode_thumb32_data.c  decode_thumb32_dsp.c  decode_thumb32_internal.h  decoder.c
src/core/decoder/tests/: test_decoder.cpp
src/core/emulator/: CMakeLists.txt  README.md  emulator.c  emulator_base.c
src/core/emulator/tests/: test_emulator.cpp  test_main.cpp
src/core/executor/: CMakeLists.txt  README.md  exec_branch.c  exec_data_proc.c  exec_exception.c  exec_fpu.c  exec_load_store.c  exec_system.c  executor.c
src/core/executor/tests/: test_arithmetic.cpp  test_common.h  test_coverage_exception.cpp  test_coverage_load_store.cpp  test_coverage_system.cpp  test_dsp.cpp  test_executor.cpp  test_fpu.cpp  test_init.cpp  test_integration_branch.cpp  test_integration_common.h  test_integration_data_proc.cpp  test_integration_memory.cpp  test_integration_misc.cpp  test_load_store.cpp  test_main.cpp  test_system.cpp
src/core/memory/: CMakeLists.txt  README.md  memory.c
src/core/memory/tests/: test_memory.cpp
src/core/mpu/: CMakeLists.txt  README.md  mpu.c
src/core/mpu/tests/: test_mpu.cpp
src/core/nvic/: CMakeLists.txt  nvic.c
src/core/nvic/tests/: test_nvic.cpp
src/emu/: CMakeLists.txt  emu_log.c
tests/: test_peripherals.py
tests/firmware/: Makefile  link.ld  link_trustzone.ld  test_acquire_release.S  test_adr.S  test_arithmetic.S  test_arithmetic.lst  test_bitfield.S  test_bitfield.lst  test_branch.S  test_branch.lst  test_bxns_blxns.S  test_compare.S  test_dsp.S  test_dsp_exchange.S  test_emulator.py  test_exception.S  test_exclusive.S  test_extend.S  test_fpu.S  test_fpu_loadstore.S  test_fpu_mac.S  test_irq.S  test_it_block.S  test_it_block.lst  test_load_store_misc.S  test_memory.S  test_memory.lst  test_misc_alu.S  test_move.S  test_mpu_basic.S  test_multiply.S  test_multiply.lst  test_multiply_halfword.S  test_nvic_basic.S  test_pack.S  test_peripheral.S  test_sat_add.S  test_saturate.S  test_sg_insn.S  (+9 more)
tests/firmware/c/: armv8m.h  armv8m_mpu.h  armv8m_nvic.h  armv8m_trustzone.h  startup.S  test_c_arithmetic.c  test_c_bitfield.c  test_c_branch.c  test_c_dsp.c  test_c_exception.c  test_c_fpu.c  test_c_memory.c  test_c_system.c  test_framework.h
tools/: ai_session.py
