[project]
name = "femu"
version = "0.1.0"
description = "Fast EMUlator - A lightweight, extensible CPU emulator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David Lynch", email = "david.lynch.home@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Emulators",
]
keywords = ["emulator", "cpu", "arm", "cortex-m", "armv8-m"]

dependencies = [
    "cffi>=1.15.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
# Main emulator CLI
femu = "femu.cli:main"

[project.entry-points."femu.plugins"]
# Extension point for peripherals

[project.urls]
Homepage = "https://github.com/dlly11/femu"
Documentation = "https://github.com/dlly11/femu#readme"
Repository = "https://github.com/dlly11/femu"

[build-system]
requires = ["setuptools>=61.0", "cffi>=1.15.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
femu = ["_lib/*.so", "_lib/*.dylib", "_lib/*.dll"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["python/femu"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/firmware/test_emulator.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "cffi.*"
ignore_missing_imports = true
